--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@dashevo/dashcore-p2p",
+  "name": "@gobytecoin/gobytecore-p2p",
   "version": "1.2.2",
-  "description": "Interface to the dash P2P network for Dashcore",
-  "author": "Dash Core Group, Inc. <dev@dash.org>",
+  "description": "Interface to the gobyte P2P network for GoBytecore",
+  "author": "GoByte Core Group, Inc. <dev@gobyte.network>",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -43,16 +43,16 @@
     }
   ],
   "keywords": [
-    "dash",
+    "gobyte",
     "bitcore",
-    "dashcore"
+    "gobytecore"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/dashevo/dashcore-p2p.git"
+    "url": "https://github.com/gobytecoin/gobytecore-p2p.git"
   },
   "dependencies": {
-    "@dashevo/dashcore-lib": "^0.19.25",
+    "@gobytecoin/gobytecore-lib": "^0.19.25",
     "bloom-filter": "^0.2.0",
     "node-buffers": "^0.1.1",
     "socks5-client": "^1.2.8"
